--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-# Tab indentation (no size specified)
-[Makefile]
 indent_style = tab
+tab_width = 2
+
+indent_brace_style = Allman
