--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,7 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitesapce = true
 
 indent_style = tab
 tab_width = 2
